; ModuleID = '/home/carl/AnghaBench/systemd/src/udev/net/extr_link-config.c_enable_name_policy.c'
source_filename = "/home/carl/AnghaBench/systemd/src/udev/net/extr_link-config.c_enable_name_policy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"net.ifnames\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @enable_name_policy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @enable_name_policy() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 @proc_cmdline_get_bool(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32* %1)
  %3 = icmp sle i64 %2, 0
  br i1 %3, label %7, label %4

4:                                                ; preds = %0
  %5 = load i32, i32* %1, align 4
  %6 = icmp ne i32 %5, 0
  br label %7

7:                                                ; preds = %4, %0
  %8 = phi i1 [ true, %0 ], [ %6, %4 ]
  %9 = zext i1 %8 to i32
  ret i32 %9
}

declare dso_local i64 @proc_cmdline_get_bool(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
